<resources>
    <string name="app_name">jobify</string>
    <string name="unknown_error">UNKNOWN_ERROR</string>
    <string name="credential_login_error">Couldn\'t sign in. Try again</string>
    <string name="sign_up_button">Not a member? Signin</string>
    <string name="person_removed_string">Contact removed</string>
    <string name="undo_string">Undo</string>
    <string name="cant_add_person_string">Couldn\'t add the person</string>
    <string name="cant_remove_person_string">Couldn\'t remove the person</string>
    <string name="person_added_string">Contact added</string>
    <string name="cant_fetch_person_string">There wasnt possible to fetch the requested person</string>
    <string name="cant_get_content_string">It wasnt possible to fetch the requested data</string>
    <string name="experience">Experience</string>
    <string name="skills_title_string">Skills</string>
    <string name="actions_title_string">Actions</string>
    <string name="recommend_button_text_string">Recommend</string>
    <string name="loguearse">Login</string>
    <string name="facebook_login_text_button">Login with Facebook</string>
    <string name="facebook_signup_text_button">Signup with Facebook</string>
    <string name="jobify">JOBIFY</string>
    <string name="email_input_hint_string">Email</string>
    <string name="password_input_hint_string">Password</string>
    <string name="remove_dialog_option_string">Delete</string>
    <string name="removed_skill_message">Skill removed</string>
    <string name="couldnt_remove_skill_message">Couldn\'t remove skill. Try again</string>
    <string name="date_of_birth_hint_string">Date of Birth</string>
    <string name="city_hint_string">City</string>
    <string name="name_hint_string">Name</string>
    <string name="gender_hint_string">Gender</string>
    <string name="nationality_hint_string">Nationality</string>
    <string name="profile_hint_string">Profile</string>
    <string name="skills_button_text_string">Skills</string>
    <string name="experiences_button_text_string">Experiences</string>
    <string name="add_skill_title_string">Add New Skill</string>
    <string name="add_button_string">Add</string>
    <string name="cancel_button_string">Cancel</string>
    <string name="remove_modal_title_start">"Remove "</string>
    <string name="added_skill_message">Skill added</string>
    <string name="couldnt_add_skill_message">Couldn\'t add skill</string>
    <string name="company_string">Company</string>
    <string name="position_string">Position</string>
    <string name="description_string">Description</string>
    <string name="duration_string">Duration</string>
    <string name="add_experience_title_string">Add New Experience</string>
    <string name="unrecommend">Unrecommend</string>
    <string name="profile_string">Profile</string>
    <string name="chats_string">Chats</string>
    <string name="contacts_string">Contacts</string>
    <string name="home_string">Home</string>
    <string name="logout_string">Logout</string>
    <string name="profile_saved">Profile saved</string>
    <string name="couldnt_save_profile">Couldn\'t save profile</string>
    <string name="engage_chat_button_text_string">Send message</string>
    <string name="message_set_string">Message sent</string>
    <string name="message_not_sent_string">Couldn\'t send message</string>
    <string name="message_deleted_text_string">Message deleted</string>
    <string name="message_deletion_error">Couldn\'t delete message</string>
    <string name="delete_chat_text_string">Delete chat with</string>
    <string name="delete_message_modal_title_string">"Remove message "</string>
    <string name="chat_deleted_text_string">Chat deleted</string>
    <string name="chat_deletion_error">Couldn\'t delete chat. Try again</string>
    <string name="message_list_title_string">Messages</string>
    <string name="send_string">Send</string>
    <string name="send_message_modal_title_string">Send New Message</string>
    <string name="pick_image_button_text_string">Pick image</string>
    <string name="filters_title_string">Filters</string>
    <string name="results_title_string">Results</string>
    <string name="search_string">Search</string>
    <string name="recommended_string">Recommended</string>
    <string name="signup_button_text">Signup</string>
    <string name="signup_suggestion_text"><u>Not a memeber? Signup</u></string>
    <string name="search_result_error_string">Couldn\'t search for people matching filters</string>
    <string name="credentials_auth_not_fullfilled_string">You must fill both fields</string>
    <string name="invalid_email_string">You must use a valid email address</string>
    <string name="couldnt_login_string">Could\'t login. Verify your credentials and try again.</string>
    <string name="couldnt_signup_string">Couldn\'t signup. Please try again</string>
    <string name="no_image_selected_string">You havent picked Image</string>
    <string name="couldnt_load_image_string">Something went wrong</string>
    <string name="no_person_parched_string">No person matched</string>
    <string name="couldn_load_profile_picture">Couldn\'t load person picture.</string>
    <string name="recomended_succesfully_sring">Fellow recommended successfully</string>
    <string name="couldn_recommend_tring">Couldn\'t recommend the fellow</string>
    <string name="unrecommended_succesfully">Fellow unrecommended successfully</string>
    <string name="loging_in_string">Signing in. Please wait...</string>
    <string name="getting_data_string">Getting data. Please wait...</string>
    <string name="removed_experience_message">Experience removed</string>
    <string name="couldnt_fetch_available_skills_string">Couldn\'t fetch skills available</string>
    <string name="select_skill_string">Select skill</string>
    <string name="select_job_position">Select job position</string>
    <string name="couldnt_fetch_available_job_positions_string">Couldn\'t fetch available job positions</string>
    <string name="set_button_string">Set</string>
    <string name="set_server_address_string">Set server address</string>
    <string name="save_profile_message">Saving your profile will allow us to use your current location in order to improve search results.\nPress SEND to provide your profile information and your location or CANCEL to abort this operation.</string>
    <string name="provide_complete_skill_message">You must provide a complete skill</string>
    <string name="provide_complete_company_string">You must provide a complete company name</string>
    <string name="provide_complete_position_string">You must provide a complete job position</string>
    <string name="provide_complete_description_string">You must provide a complete description of the experience</string>
    <string name="provide_complete_duration_string">You must provide a complete experience dutarion</string>
    <string name="provide_complete_message_string">You must provide a complete message</string>
    <string name="skill_already_added_string">This profile already include that skill</string>
    <string name="added_experience_message">Experience added</string>
    <string name="recomendations_string">Recomendations</string>
</resources>
