<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/home_string" />
        <item
            android:id="@+id/nav_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/search_string" />
        <item
            android:id="@+id/nav_mypeople"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/contacts_string" />
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/ic_forum"
            android:title="@string/chats_string" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_48dp"
            android:title="@string/profile_string" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/logout_string" />
    </group>

</menu>
