<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/detail_information_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"

            android:orientation="vertical" android:gravity="center"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/pick_image_button"
                    android:textColor="@android:color/background_light"
                    android:backgroundTint="#3b5998"
                    android:text="@string/pick_image_button_text_string"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="@dimen/card_margin"/>

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="8dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>

            <EditText
                android:id="@+id/user_name_input"
                android:hint="@string/name_hint_string"
                android:inputType="textPersonName"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/card_margin"/>

            <EditText
                android:id="@+id/user_city_input"
                android:hint="@string/city_hint_string"
                android:inputType="textAutoComplete"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/card_margin"/>


            <EditText
                android:id="@+id/user_dob_input"
                android:hint="@string/date_of_birth_hint_string"
                android:inputType="date"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/card_margin"/>

            <EditText
                android:id="@+id/user_gender_input"
                android:hint="@string/gender_hint_string"
                android:inputType="textAutoComplete"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/card_margin"/>

            <EditText
                android:id="@+id/user_nationality_input"
                android:hint="@string/nationality_hint_string"
                android:inputType="textAutoComplete"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/card_margin"/>

            <EditText
                android:id="@+id/user_profile_input"
                android:hint="@string/profile_hint_string"
                android:inputType="textAutoCorrect"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/card_margin"
                android:maxLength="140"/>


            <Button
                android:id="@+id/skills_button_access"
                android:text="@string/skills_button_text_string"
                android:textColor="@color/cardview_light_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:paddingLeft="@dimen/choose_button_side_space"
                android:textSize="@dimen/choose_button_font_size" />
            <Button
                android:id="@+id/experiences_button_access"
                android:text="@string/experiences_button_text_string"
                android:textColor="@android:color/background_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#3b5998"
                android:textSize="@dimen/choose_button_font_size"
                android:paddingLeft="@dimen/choose_button_side_space"
                android:paddingRight="@dimen/choose_button_side_space"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save_profile"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_done"
        android:tint="#ffffff"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:layout_gravity="bottom|right" />

</android.support.design.widget.CoordinatorLayout>
