<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/detail_information_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"

            android:orientation="vertical" android:gravity="center"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.SearchResult.Subtitle"
                android:layout_margin="@dimen/card_margin"
                android:text="@string/filters_title_string"/>

            <EditText
                android:id="@+id/skill_input"
                android:hint="@string/skills_title_string"
                android:inputType="textAutoComplete"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/card_margin"/>

            <EditText
                android:id="@+id/position_input"
                android:hint="@string/position_string"
                android:inputType="textAutoComplete"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/card_margin"/>

            <TextView
                android:id="@+id/results_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.SearchResult.Subtitle"
                android:layout_margin="@dimen/card_margin"
                android:text="@string/results_title_string"/>

            <FrameLayout
                android:id="@+id/folks_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </FrameLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/search_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@android:drawable/ic_menu_search"
        android:tint="#ffffff"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:layout_gravity="bottom|right" />

</android.support.design.widget.CoordinatorLayout>
